# VK-Internship-Tarantool-App

./: README.md  docker-compose.yml
authorization_service/: Dockerfile
authorization_service/certificates/: private_key.pem  public_key.pem
authorization_service/src/: config.py  main.py  pyproject.toml
authorization_service/src/application/auth/: dto.py  exceptions.py  services.py
authorization_service/src/application/user/: dto.py  interfaces.py  mapper.py  services.py
authorization_service/src/domain/: enums.py
authorization_service/src/domain/common/: value_object.py
authorization_service/src/domain/entities/: user.py
authorization_service/src/domain/exceptions/: user_initial.py  user_login.py  user_password.py
authorization_service/src/domain/value_objects/: __init__.py  user_initials.py  user_login.py  user_password.py
authorization_service/src/infrastructure/db/: main.py
authorization_service/src/infrastructure/db/common/: repository.py
authorization_service/src/infrastructure/db/repositories/: user_repository.py
authorization_service/src/presentation/api/controllers/: authorization.py  user.py
authorization_service/src/presentation/api/providers/: services.py
documentation/: api_docs.md  how_to_run.md  structure.md
key_value_service/: .dockerignore  Dockerfile
key_value_service/src/: config.py  main.py  pyproject.toml
key_value_service/src/application/: dto.py  exceptions.py  interfaces.py  mapper.py  services.py
key_value_service/src/domain/: exceptions.py
key_value_service/src/domain/common/: aggregate_root.py  entity.py  event.py  exception.py
key_value_service/src/domain/entities/: key_value_pair.py  keys.py
key_value_service/src/domain/value_objects/: key.py  value.py
key_value_service/src/infrastructure/db/: main.py
key_value_service/src/infrastructure/db/common/: repository.py
key_value_service/src/infrastructure/db/repositories/: kv_repository.py
key_value_service/src/infrastructure/external_api/: auth_service.py
key_value_service/src/presentation/api/controllers/: key_value.py
key_value_service/src/presentation/api/providers/: services.py
postman_tests/: VK Internship Integration Tests.postman_collection.json
tarantool_infra/: Dockerfile  app.lua
(+6 files in other folders)
