[tool.poetry]
name = "key-value service"
version = "0.1.0"
description = "description = \"A microservice which allows authorized users to insert and select key-value data to tarantool db\""
authors = ["mrForza <rg_programmer@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
tarantool = "^1.2.0"
asynctnt = "^2.3.0"
aiohttp = "^3.10.4"
requests = "^2.32.3"
flake8 = "^7.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
